# Python-Tricks

./: .gitignore  .pre-commit-config.yaml  Makefile  pyproject.toml
python_tricks_a_buffet_of_awesome_python_features/patterns_for_cleaner_python/: assert.py  comma.py
scripts/os/: get_path_separator.py
scripts/rich/: make_text_pretty.py
